# PhoneBridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/brand/: ART_DIRECTION.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  path_utils.rs  privacy.rs  whatsapp.rs
src-tauri/src/adapters/: adb_generic.rs  folder.rs  mod.rs  smartswitch.rs  takeout.rs
src-tauri/src/adb/: commands.rs  discovery.rs  media.rs  mod.rs  whatsapp_pull.rs
src-tauri/src/db/: classification.rs  duplicates.rs  indexing.rs  mod.rs  schema.rs  similarity.rs
src-tauri/src/media/: mod.rs
src-tauri/src/smartswitch/: binary.rs  crypto.rs  inventory.rs  mod.rs  parsers.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/whatsapp/: binary.rs  decryption.rs  keyderivation.rs  mod.rs
src-tauri/tests/fixtures/: smartswitch_req_items_info.json
src/components/: DuplicateCompare.tsx  EmptyState.tsx  Lightbox.tsx  PathPickerField.tsx  SectionHeader.tsx  StatsCard.tsx  StatusCallout.tsx
src/lib/: api.ts  format.test.ts  format.ts  types.ts  useEscapeToClose.ts  ux.test.ts  ux.ts
src/pages/: Dashboard.test.tsx  Dashboard.tsx  DataExplorer.test.tsx  DataExplorer.tsx  Gallery.test.tsx  Gallery.tsx  Sync.tsx
src/pages/Sync/: CompletionStep.tsx  DataGatheringStep.tsx  PreviewStep.tsx  SourceSelectionStep.tsx  index.tsx  useSyncHandlers.ts  useSyncProgress.ts  useSyncState.ts
