[package]
name = "phonebridge"
version = "0.1.0"
description = "Local Android data recovery and backup explorer"
authors = ["PhoneBridge contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "phonebridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
thiserror = "2.0"
time = "=0.3.36"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dependencies.uuid]
version = "1.11"
features = ["v5"]

[dev-dependencies]
tempfile = "3.14"
