[package]
name = "phonebridge"
version = "0.1.0"
description = "Local Android data recovery and backup explorer"
authors = ["PhoneBridge contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "phonebridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
flate2 = "1.0"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
md-5 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-global-shortcut = "2"
thiserror = "2.0"
trash = "5.2"
time = "0.3.47"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dependencies.uuid]
version = "1.11"
features = ["v5"]

[dev-dependencies]
tempfile = "3.14"
